<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.spigot_gillesm</groupId>
    <artifactId>spigot-simple-libs</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <modules>
        <module>format-lib</module>
        <module>command-lib</module>
        <module>file-utils</module>
        <module>player-lib</module>
        <module>item-lib</module>
        <module>gui-lib</module>
    </modules>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <format-lib.version>1.0.0</format-lib.version>
        <item-lib.version>1.2.0</item-lib.version>
        <command-lib.version>1.0.0</command-lib.version>
        <spell-lib.version>1.0.0</spell-lib.version>
        <rpg-stats-lib.version>1.0.0</rpg-stats-lib.version>
        <player-lib.version>1.0.0</player-lib.version>
        <gui-lib.version>1.1.0</gui-lib.version>
        <file-utils.version>1.0.0</file-utils.version>
        <yaml-lib.version>1.0.0</yaml-lib.version>
        <rp-classes.version>1.0.0</rp-classes.version>
        <spigot.version>1.21.5-R0.1-SNAPSHOT</spigot.version>
        <lombok.version>1.18.38</lombok.version>
        <annotations.version>23.0.0</annotations.version>
        <apache-commons.version>3.17.0</apache-commons.version>
    </properties>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>format-lib</artifactId>
                <version>${format-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>item-lib</artifactId>
                <version>${item-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>command-lib</artifactId>
                <version>${command-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>spell-lib</artifactId>
                <version>${spell-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>file-utils</artifactId>
                <version>${file-utils.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>player-lib</artifactId>
                <version>${player-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>rpg-stats-lib</artifactId>
                <version>${rpg-stats-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>gui-lib</artifactId>
                <version>${gui-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>yaml-lib</artifactId>
                <version>${yaml-lib.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spigot_gillesm</groupId>
                <artifactId>rp-classes</artifactId>
                <version>${rp-classes.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache-commons.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>